Define new RPC to get information about an existing job allocation, slurm_confirm_allocation.

--- a/trunk/doc/man/man3/slurm_error.3
+++ b/trunk/doc/man/man3/slurm_error.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "September 2002" "Morris Jette" "Slurm error calls"
+.TH "Slurm API" "3" "October 2002" "Morris Jette" "Slurm error calls"
 .SH "NAME"
 .LP 
 \fBslurm_job\fR \- Slurm error calls
@@ -84,6 +84,7 @@ details.
 \fBslurm_allocate_resources\fR(3), 
 \fBslurm_cancel_job\fR(3), \fBslurm_cancel_job_step\fR(3), 
 \fBslurm_complete_job\fR(3), \fBslurm_complete_job_step\fR(3), 
+\fBslurm_confirm_allocation\fR(3), 
 \fBslurm_free_ctl_conf\fR(3), 
 \fBslurm_free_resource_allocation_response_msg\fR(3), \fBslurm_free_job_info\fR(3), 
 \fBslurm_free_job_step_create_response_msg\fR(3), 
