--- a/trunk/doc/man/man3/slurm_info.3
+++ b/trunk/doc/man/man3/slurm_info.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "July 2002" "Morris Jette" "Slurm informational calls"
+.TH "Slurm API" "3" "October 2002" "Morris Jette" "Slurm informational calls"
 .SH "NAME"
 .LP 
 \fBslurm_info\fR \- Slurm informational calls
@@ -277,5 +277,6 @@ FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
 details.
 .SH "SEE ALSO"
 .LP 
-\fBscontrol\fR(1), \fBsqueue\fR(1), \fBslurm_get_errno\fR(3), \fBslurm_perror\fR(3), \fBslurm_strerror\fR(3)
+\fBscontrol\fR(1), \fBsqueue\fR(1), \fBslurm_confirm_allocation\fR(3), 
+\fBslurm_get_errno\fR(3), \fBslurm_perror\fR(3), \fBslurm_strerror\fR(3)
 
