--- a/trunk/doc/man/man3/slurm_allocate_resources.3
+++ b/trunk/doc/man/man3/slurm_allocate_resources.3
@@ -1,7 +1,11 @@
-.TH "Slurm API" "3" "October 2002" "Morris Jette" "Slurm job management calls"
+.TH "Slurm API" "3" "October 2002" "Morris Jette" "Slurm job initiation functions"
 .SH "NAME"
-.LP 
-\fBslurm_job\fR \- Slurm job management calls
+slurm_allocate_resources, slurm_allocate_resources_and_run,
+slurm_confirm_allocation, 
+slurm_free_resource_allocation_and_run_response_msg, 
+slurm_free_submit_response_response_msg, slurm_init_job_desc_msg, 
+slurm_job_will_run, slurm_submit_batch_job
+\- Slurm job initiation functions
 .SH "SYNTAX"
 .LP 
 #include <slurm.h>
@@ -16,6 +20,14 @@ int \fBslurm_allocate_resources\fR (
 .br 
 );
 .LP 
+int \fBslurm_allocate_resources_and_run\fR (
+.br 
+	job_desc_msg_t *\fIjob_desc_msg_ptr\fP,
+.br 
+	resource_allocation_and_run_response_msg_t **\fIslurm_alloc_run_msg_pptr\fP
+.br 
+);
+.LP 
 int \fBslurm_confirm_allocation\fR (
 .br 
 	old_job_alloc_msg_t *\fIold_job_desc_msg_ptr\fP,
@@ -24,38 +36,10 @@ int \fBslurm_confirm_allocation\fR (
 .br 
 );
 .LP
-int \fBslurm_cancel_job\fR (
+void \fBslurm_free_resource_allocation_and_run_response_msg\fR ( 
 .br 
-	uint32_t \fIjob_id\fP
+	resource_allocation_and_run_response_msg_t *\fIslurm_alloc_run_msg_ptr\fP 
 .br 
-);
-.LP
-int \fBslurm_cancel_job_step\fR (
-.br 
-	uint32_t \fIjob_id\fP,
-.br 
-	uint32_t \fIjob_step_id\fP
-.br 
-);
-.LP
-int \fBslurm_complete_job\fR (
-.br 
-	uint32_t \fIjob_id\fP
-.br 
-);
-.LP
-int \fBslurm_complete_job_step\fR (
-.br 
-	uint32_t \fIjob_id\fP,
-.br 
-	uint32_t \fIjob_step_id\fP
-.br 
-);
-.LP
-void \fBslurm_free_job_step_create_response_msg\fR (
-.br
-	job_step_create_response_msg_t *\fIslurm_step_alloc_resp_msg_ptr\fP
-.br
 );
 .LP
 void \fBslurm_free_resource_allocation_response_msg\fR ( 
@@ -84,26 +68,11 @@ int \fBslurm_job_will_run\fR (
 .br 
 );
 .LP
-int \fBslurm_job_step_create\fR (
-.br
-	job_step_create_request_msg_t *\fIslurm_step_alloc_req_msg_ptr\fP, 
-.br
-	job_step_create_response_msg_t **\fIslurm_step_alloc_resp_msg_pptr\fP
-.br
-);
-{
-.LP
 int \fBslurm_submit_batch_job\fR (
 .br 
 	job_desc_msg_t *\fIjob_desc_msg_ptr\fP,
 .br 
 	submit_response_msg_t **\fIslurm_submit_msg_pptr\fP 
-.br 
-);
-.LP
-int \fBslurm_update_job\fR (
-.br 
-	job_desc_msg_t *\fIjob_desc_msg_ptr\fP
 .br 
 );
 .SH "ARGUMENTS"
@@ -117,12 +86,9 @@ allocation immediately; do not queue the request.
 Specifies the pointer to a job request specification. See slurm.h for full details 
 on the data structure's contents. 
 .TP 
-\fIjob_id\fP
-Slurm job id number.
-.TP 
 \fIold_job_desc_msg_ptr\fP
-Specifies the pointer to a description of an existing job. See slurm.h for full details 
-on the data structure's contents. 
+Specifies the pointer to a description of an existing job. See slurm.h for 
+full details on the data structure's contents. 
 .TP 
 \fIslurm_alloc_msg_pptr\fP
 Specifies the double pointer to the structure to be created and filled with a 
@@ -132,21 +98,17 @@ structure's contents.
 .TP 
 \fIslurm_alloc_msg_ptr\fP
 Specifies the pointer to the structure to be created and filled in by the function 
-\fIslurm_allocate_resources\fP or \fIslurm_job_will_run\fP.
-.TP
-\fIslurm_step_alloc_req_msg_ptr\fP
-Specifies the pointer to the structure with job spep request specification. See 
-slurm.h for full details on the data structure's contents.
-.TP
-\fIslurm_step_alloc_resp_msg_pptr\fP
-Specifies the double pointer to the structure to be created and filled with a description of the 
-created job step: node allocation, credentials, etc. See slurm.h for full details on the data 
-structure's contents. 
-.TP
-\fIslurm_step_alloc_resp_msg_ptr\fP
-Specifies the pointer to the structure to be created and filled with a description of the 
-created job step: node allocation, credentials, etc. See slurm.h for full details on the data 
-structure's contents. 
+\fIslurm_allocate_resources\fP, \fIslurm_confirm_allocation\fP or \fIslurm_job_will_run\fP.
+.TP 
+\fIslurm_alloc_run_msg_pptr\fP
+Specifies the double pointer to the structure to be created and filled with a 
+description of the created resource allocation (job) and job step: job ID, 
+step_id, list of allocated nodes, processor count per allocated node, etc. 
+See slurm.h for full details on the data structure's contents. 
+.TP 
+\fIslurm_alloc_run_msg_ptr\fP
+Specifies the pointer to the structure to be created and filled in by the function 
+\fBslurm_allocate_resources_and_run\fP.
 .TP 
 \fIslurm_submit_msg_pptr\fP
 Specifies the double pointer to the structure to be created and filled with a description 
@@ -154,46 +116,32 @@ of the created job: job ID, etc. See slurm.h for full details on the data struct
 .TP 
 \fIslurm_submit_msg_ptr\fP
 Specifies the pointer to the structure to be created and filled in by the function \fIslurm_submit_batch_job\fP.
-.TP
-\fIjob_step_id\fp
-Slurm job step id number.
 .SH "DESCRIPTION"
 .LP 
 \fBslurm_allocate_resources\fR Request a resource allocation for a job. If successful, a 
 job entry is created. Always release the response message when no longer required using 
 the function \fBslurm_free_resource_allocation_response_msg\fR.
 .LP 
-\fBslurm_cancel_job\fR Request the cancellation of a running or pending job. This function 
-may only be successfully executed by the job's owner or user root.
-.LP 
-\fBslurm_cancel_job_step\fR Request the cancellation of a running job step. This function 
-may only be successfully executed by the job's owner or user root.
-.LP 
-\fBslurm_complete_job\fR Note the termination of a job. This function may only be successfully 
-executed by the job's owner or user root.
-.LP 
-\fBslurm_complete_job_step\fR Note the termination of a job step. This function may only 
-be successfully executed by the job's owner or user root.
+\fBslurm_allocate_resources_and_run\fR Request a resource allocation for a job 
+including the initiation of a job step to span the full allocation. If successful, 
+job and job step records are created. Always release the response message when no 
+longer required using the function \fBslurm_free_resource_allocation_and_run_response_msg\fR.
 .LP 
 \fBslurm_confirm_allocation\fR Return detailed information on a specific existing job 
 allocation.  This function may only be successfully executed by the job's owner or user 
 root.
-.LP
-\fBslurm_free_job_step_create_response_msg\fR Release the storage generated in response 
-to a call of the function \fBslurm_job_step_create\fR.
+.LP 
+\fBslurm_free_resource_allocation_and_run_response_msg\fR Release the storage generated 
+in response to a call of the function \fBslurm_allocate_resources_and_run\fR.
 .LP 
 \fBslurm_free_resource_allocation_response_msg\fR Release the storage generated in response 
-to a call of the function \fBslurm_allocate_resources\fR or \fBslurm_job_will_run\fR.
+to a call of the function \fBslurm_allocate_resources\fR, \fBslurm_confirm_allocation\fR or \fBslurm_job_will_run\fR.
 .LP 
-\fBslurm_free_submit_response_msg\fR Release the storage generated in response to a call 
-of the function \fBslurm_submit_batch_job\fR.
+\fBslurm_free_submit_response_msg\fR Release the storage generated in response 
+to a call of the function \fBslurm_submit_batch_job\fR.
 .LP 
 \fBslurm_init_job_desc_msg\fR Initialize the contents of a job descriptor with default values. 
 Execute this function before issuing a request to submit or modify a job.
-.LP
-\fBslurm_job_step_create\fR Initialize a job step including the allocation of nodes to 
-it from those already allocate to that job. Always release the response message when no 
-longer required using the function \fBslurm_free_job_step_create_response_msg\fR.
 .LP 
 \fBslurm_job_will_run\fR Determine if the supplied job description could be executed immediately. 
 If successful, a list of the available nodes and their configurations will be returned. Always 
@@ -203,13 +151,6 @@ release the response message when no longer required using the function
 \fBslurm_submit_batch_job\fR Submit a job for later execution. The job will be queued 
 and executed when resources are available.  Always release the response message when no 
 longer required using the function \fBslurm_free_submit_response_msg\fR.
-.LP 
-\fBslurm_update_job\fR Update the characteristics of an existing job. Not all job 
-characteristics may be changed (e.g. the time limit of a job may be changed, but the nodes 
-allocated to a running job may not be changed). This function may only be executed 
-by the job's owner only for selected operations (e.g. decrease the job's priority). 
-User root may modify more job parameters and in ways the job's owner can not (e.g. 
-changing the job's associated features or increasing its priority).
 .SH "RETURN VALUE"
 .LP
 On success, zero is returned. On error, -1 is returned, and Slurm error code is set appropriately.
@@ -287,18 +228,26 @@ int main (int argc, char *argv[])
 .br 
 	job_mesg. num_nodes = 400;
 .br 
-	if (slurm_allocate_resources(&job_desc_msg,&slurm_alloc_msg_ptr,true)) {
+	if (slurm_allocate_resources(&job_desc_msg,
 .br
-		printf ("allocate errno %d\n", slurm_get_errno());
+	                             &slurm_alloc_msg_ptr,
+.br
+	                             true)) {
+.br
+		slurm_perror ("slurm_allocate_resources error");
 .br 
 		exit (1);
 	}
 .br 
 	printf ("Allocated nodes %s to job_id %u\n", 
 .br 
-		slurm_alloc_msg_ptr->node_list, slurm_alloc_msg_ptr->job_id );
+	        slurm_alloc_msg_ptr->node_list, 
+.br
+	        slurm_alloc_msg_ptr->job_id );
 .br 
-	if ( slurm_job_cancel ( slurm_alloc_msg_ptr->job_id ) ) {
+	if (slurm_job_cancel(slurm_alloc_msg_ptr->
+.br
+	                     job_id)) {
 .br 
 		printf ("cancel errno %d\n", slurm_get_errno());
 .br 
@@ -306,9 +255,11 @@ int main (int argc, char *argv[])
 .br 
 	}
 .br
-	printf ("canceled job_id %u\n", slurm_alloc_msg_ptr->job_id );
+	printf ("canceled job_id %u\n", 
+.br
+	        slurm_alloc_msg_ptr->job_id );
 .br 
-	slurm_free_resource_allocation_response_msg ( slurm_alloc_msg_ptr );
+	slurm_free_resource_allocation_response_msg (slurm_alloc_msg_ptr);
 .br 
 	exit (0);
 .br 
