--- a/trunk/doc/man/man3/slurm_get_errno.3
+++ b/trunk/doc/man/man3/slurm_get_errno.3
@@ -1,22 +1,21 @@
-.TH "Slurm API" "3" "October 2002" "Morris Jette" "Slurm error calls"
+.TH "Slurm API" "3" "October 2002" "Morris Jette" "Slurm error handling functions"
 .SH "NAME"
-.LP 
-\fBslurm_job\fR \- Slurm error calls
+slurm_get_errno, slurm_perror, slurm_strerror \- Slurm error handling functions
 .SH "SYNTAX"
 .LP 
 #include <slurm.h>
 .LP 
 int \fBslurm_get_errno\fR ( );
 .LP
-char * \fBslurm_strerror\fR (
-.br 
-	int \fIerrnum\fP
-.br 
-);
-.LP
 void \fBslurm_perror\fR ( 
 .br 
 	char *\fIheader\fP 
+.br 
+);
+.LP
+char * \fBslurm_strerror\fR (
+.br 
+	int \fIerrnum\fP
 .br 
 );
 .SH "ARGUMENTS"
@@ -48,13 +47,17 @@ int main (int argc, char *argv[])
 .br 
 {
 .br
-	/* set-up and execute a Slurm API function returning -1 here */
+	/* assume Slurm API function failed here */
 .br
-	fprintf (stderr, "Slurm function errno = %d\n", slurm_get_errno ());
+	fprintf (stderr, "Slurm function errno = %d\n", 
+.br
+	         slurm_get_errno ());
 .br
 	fprintf (stderr, "Slurm function errno = %d %s\n",
 .br
-		slurm_get_errno (), slurm_strerror (slurm_get_errno ()));
+	         slurm_get_errno (), 
+.br
+	         slurm_strerror (slurm_get_errno ()));
 .br
 	slurm_perror ("Slurm function");
 .br
@@ -81,18 +84,20 @@ FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
 details.
 .SH "SEE ALSO"
 .LP 
-\fBslurm_allocate_resources\fR(3), 
+\fBslurm_allocate_resources\fR(3), \fBslurm_allocate_resources_and_run\fR(3), 
 \fBslurm_cancel_job\fR(3), \fBslurm_cancel_job_step\fR(3), 
 \fBslurm_complete_job\fR(3), \fBslurm_complete_job_step\fR(3), 
 \fBslurm_confirm_allocation\fR(3), 
-\fBslurm_free_ctl_conf\fR(3), 
-\fBslurm_free_resource_allocation_response_msg\fR(3), \fBslurm_free_job_info\fR(3), 
+\fBslurm_free_ctl_conf\fR(3), \fBslurm_free_job_info\fR(3), 
 \fBslurm_free_job_step_create_response_msg\fR(3), 
 \fBslurm_free_node_info\fR(3), \fBslurm_free_partition_info\fR(3), 
+\fBslurm_free_resource_allocation_response_msg\fR(3), 
 \fBslurm_free_submit_response_response_msg\fR(3), 
-\fBslurm_init_part_desc_msg\fR(3), \fBslurm_init_job_desc_msg\fR(3), 
-\fBslurm_job_step_create\fR(3), \flslurm_job_will_run\fR(3), 
-\fBslurm_load_ctl_conf\fR(3), \fBslurm_load_jobs\fR(3),  \fBslurm_load_node\fR(3), \fBslurm_load_partitions\fR(3), 
+\fBslurm_get_job_steps\fR(3),
+\fBslurm_init_job_desc_msg\fR(3), \fBslurm_init_part_desc_msg\fR(3),  
+\fBslurm_job_step_create\fR(3), \fBslurm_job_will_run\fR(3), 
+\fBslurm_load_ctl_conf\fR(3), \fBslurm_load_jobs\fR(3), 
+\fBslurm_load_node\fR(3), \fBslurm_load_partitions\fR(3), 
 \fBslurm_reconfigure\fR(3), \fBslurm_shutdown\fR(3), \fBslurm_submit_batch_job\fR(3), 
 \fBslurm_update_job\fR(3), \fBslurm_update_node\fR(3), \fBslurm_update_partition\fR(3)
 
