--- a/trunk/doc/man/man1/slurmd.1
+++ b/trunk/doc/man/man1/slurmd.1
@@ -1,4 +1,4 @@
-.TH SLURMD "1" "August 2002" "slurmctld 0.1" "Slurm components"
+.TH SLURMD "1" "October 2002" "slurmctld 0.1" "Slurm components"
 .SH "NAME"
 slurmd \- The compute node daemon of Slurm.
 .SH "SYNOPSIS"
@@ -81,3 +81,8 @@ SLURM is distributed in the hope that it will be useful, but WITHOUT ANY
 WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
 details.
+.SH "FILES"
+.LP
+/etc/slurm.conf
+.SH "SEE ALSO"
+\fBslurm.conf\fR(5)
