--- a/trunk/doc/man/man8/slurmd.8
+++ b/trunk/doc/man/man8/slurmd.8
@@ -1,23 +1,17 @@
-.TH SLURMCTLD "1" "October 2002" "slurmctld 0.1" "Slurm components"
+.TH SLURMD "8" "October 2002" "slurmctld 0.1" "Slurm components"
 .SH "NAME"
-slurmctld \- The central management daemon of Slurm.
+slurmd \- The compute node daemon of Slurm.
 .SH "SYNOPSIS"
-\fBslurmctld\fR [\fIOPTIONS\fR...]
+\fBslurmd\fR [\fIOPTIONS\fR...]
 .SH "DESCRIPTION"
-\fBslurmctld\fR is the central management daemon of Slurm. It monitors all other 
-Slurm daemons and resources, accepts work (jobs), and allocates resources to 
-those jobs. Given the critical functionality of \fBslurmctld\fR, there may 
-be a backup server to assume these functions in the event that the primary 
-server fails. 
+\fBslurmld\fR is the compute node daemon of Slurm. It monitors all tasks running
+on the compute node , accepts work (tasks), launched tasks, and kill running tasks 
+upon request.
 .TP
 OPTIONS
 .TP
 \fB-d\fR
 Execute \fBslurmctld\fR as a daemon (in the background) with logging to syslog.
-.TP
-\fB-D\fR
-Debug mode. Execute \fBslurmctld\fR in the foreground with logging to stdout. 
-(Current default).
 .TP
 \fB-e <errlev>\fR
 Set stderr logging to the specified level..TP
@@ -35,10 +29,6 @@ Write log messages to the specified file.
 .TP
 \fB-s <errlev>\fR
 Set syslog logging to the specified level.
-.TP
-\fB-r\fR
-Recover \fBslurmctld\fR state from its last checkpoint 
-(performed periodically and at time of graceful shutdown).
 .TP
 ARGUMENTS
 .TP
@@ -68,13 +58,12 @@ Log highly detailed debugging messages
 \fB<file>\fR
 Pathname of a configuration or log file to use.
 .SH "NOTES"
-It may be useful to experiment with different \fBslurmctld\fR specific 
+It may be useful to experiment with different \fBslurmd\fR specific 
 configuration parameters using a distinct configuration file. However, 
-this special configuration file will not be recognized by \fBslurmd\fR 
+this special configuration file will not be recognized by \fBslurmctld\fR 
 or the Slurm programs. If you desire changing communication ports, 
 the location of the temporary file system, or other parameters used 
-by other Slurm components, change the common configuration file, 
-\fB/etc/slurm.conf\fR.
+by other Slurm components, change the common configuration file.
 .SH "COPYING"
 Copyright (C) 2002 The Regents of the University of California.
 Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -96,4 +85,4 @@ details.
 .LP
 /etc/slurm.conf
 .SH "SEE ALSO"
-\fBslurm.conf\fR(5)
+\fBslurm.conf\fR(5), \fBslurmctld\fR(8)
