Define new slurmd option "-c" (cleanup).

--- a/trunk/doc/man/man8/slurmd.8
+++ b/trunk/doc/man/man8/slurmd.8
@@ -10,6 +10,10 @@ upon request.
 .TP
 OPTIONS
 .TP
+\fB-c\fR
+Clear system locks as needed. This may be required if \fBslurmd\fR terminated 
+abnormally.
+.TP
 \fB-d\fR
 Execute \fBslurmctld\fR as a daemon (in the background) with logging to syslog.
 .TP
