--- a/trunk/doc/man/man1/scancel.1
+++ b/trunk/doc/man/man1/scancel.1
@@ -1,25 +1,44 @@
-.TH SCANCEL "1" "July 2002" "scancel 0.1" "Slurm components"
+.TH SCANCEL "1" "November 2002" "scancel 0.1" "Slurm components"
 .SH "NAME"
 scancel \- Used to cancel jobs or job steps that are under the control of Slurm.
 .SH "SYNOPSIS"
-\fBscancel\fR [\fIOPTIONS\fR...] \fIjob_id\fR[.\fIstep_id\fR] [\fIjob_id\fR[.\fIstep_id\fR]...]
+\fBscancel\fR [\fIOPTIONS\fR...] [\fIjob_id\fR[.\fIstep_id\fR]] [\fIjob_id\fR[.\fIstep_id\fR]...]
 .SH "DESCRIPTION"
 \fBscancel\fR is used to cancel jobs or job steps. An arbitrary number of jobs 
-or job steps may be cancelled using a space separated list. A job or job step 
+or job steps may be cancelled using job specification used for filtering or a
+space separated list of specific job and/or job step IDs. A job or job step 
 can only be cancelled by the owner of that job or user root. If an attempt is 
 made by an unauthorized user to cancel a job or job step, an error message will 
 be printed and the job will not be cancelled. 
 .TP
 OPTIONS
 .TP
-\fB-h\fR
+\fB\-?\fR, \fB\-\-help\fR
 Print a help message describing the usage of scancel.
 .TP
-\fB-i\fR
+\fB\-i\fR, \fB\-\-interactive\fR
 Interactive mode. Confirm each job_id.step_id before performing the cancel operation.
 .TP
-\fB-v\fR
-Print the version number of the scontrol command.
+\fB\-n\fR, \fB\-\-name\fR=\fIjob_name\fR
+The name of jobs to be cancelled.
+.TP
+\fB\-p\fR, \fB\-\-partition\fR=\fIpartition_name\fR
+The name of the partition from which jobs are to be cancelled.
+.TP
+\fB\-s\fR, \fB\-\-state\fR=\fIjob_state_name\fR
+The state of the jobs are to be cancelled. \fIjob_state_name\fR may have a value of 
+either "PENDING" or "RUNNING".
+.TP
+\fB\-u\fR, \fB\-\-user\fR=\fIuser_name\fR
+The name of the user whose jobs are to be cancelled.
+.TP
+\fB\-v\fR, \fB\-\-verbose\fR
+Print additional logging. Multiple v's increase logging detail. 
+.TP
+\fB\-V\fR, \fB\-\-Version\fR
+Print the version number of the scontrol command. 
+.TP
+NOTE: If multiple filters are supplied (e.g. \fB\-\-partition\fR and \fB\-\-name\fR) only the jobs satisfying all of the filtering options will be cancelled.
 .TP
 ARGUMENTS
 .TP
@@ -37,6 +56,9 @@ scancel 1234.1 1234.3
 .TP
 Cancel job 1234 along with all of its steps:
 scancel 1234
+.TP
+Cancel job all pending jobs belonging to user "bob" in partition "debug":
+scancel --state=PENDING --user=bob --partition=debug
 .SH "COPYING"
 Copyright (C) 2002 The Regents of the University of California.
 Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
