Fix typo, mis-labling of document.

--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -1,4 +1,4 @@
-.TH SCONTROL "1" "October 2002" "squeue 0.1" "Slurm components"
+.TH SQUEUE "1" "November 2002" "squeue 0.1" "Slurm components"
 
 .SH "NAME"
 squeue \- Used to view information of jobs located in the scheduling queue.
