Added new man pages for hostlist management functions.

--- a/trunk/doc/man/man3/slurm_job_step_create.3
+++ b/trunk/doc/man/man3/slurm_job_step_create.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "October 2002" "Morris Jette" "Slurm job step initiation functions"
+.TH "Slurm API" "3" "November 2002" "Morris Jette" "Slurm job step initiation functions"
 .SH "NAME"
 slurm_job_step_create \- Slurm job step initiation functions
 .SH "SYNTAX"
@@ -74,4 +74,5 @@ details.
 .SH "SEE ALSO"
 .LP 
 \fBsrun\fR(1), 
+\fBslurm_allocate_resources_and_run\fR(3), 
 \fBslurm_get_errno\fR(3), \fBslurm_perror\fR(3), \fBslurm_strerror\fR(3)
