Minor revisions to man pages to track changes in APIs.

--- a/trunk/doc/man/man3/slurm_allocate_resources.3
+++ b/trunk/doc/man/man3/slurm_allocate_resources.3
@@ -288,6 +288,6 @@ details.
 .SH "SEE ALSO"
 .LP 
 \fBhostlist_create\fR(3), \fBhostlist_shift\fR(3), \fBhostlist_destroy\fR(3), 
-\fBscancel\fR(1), \fBsrun\fR(1), \fBslurm_free_job_info\fR(3), 
+\fBscancel\fR(1), \fBsrun\fR(1), \fBslurm_free_job_info_msg\fR(3), 
 \fBslurm_get_errno\fR(3), \fBslurm_load_jobs\fR(3), 
 \fBslurm_perror\fR(3), \fBslurm_strerror\fR(3)
