--- a/trunk/doc/man/man3/slurm_get_errno.3
+++ b/trunk/doc/man/man3/slurm_get_errno.3
@@ -88,7 +88,7 @@ details.
 \fBslurm_cancel_job\fR(3), \fBslurm_cancel_job_step\fR(3), 
 \fBslurm_complete_job\fR(3), \fBslurm_complete_job_step\fR(3), 
 \fBslurm_confirm_allocation\fR(3), 
-\fBslurm_free_ctl_conf\fR(3), \fBslurm_free_job_info\fR(3), 
+\fBslurm_free_ctl_conf\fR(3), \fBslurm_free_job_info_msg\fR(3), 
 \fBslurm_free_job_step_create_response_msg\fR(3), 
 \fBslurm_free_node_info\fR(3), \fBslurm_free_partition_info\fR(3), 
 \fBslurm_free_resource_allocation_response_msg\fR(3), 
